SQRP-154 Cleanup leftovers from FOSSA